修改报名描述字段

--- a/views/register.html
+++ b/views/register.html
@@ -32,7 +32,7 @@
 			</div>
 			<div class="reitems">
 				<p class="refont">自我描述:</p>
-				<input type="text" class="reinput descrption" placeholder="请填写自我描述（20字以内）" maxlength="20">
+				<input type="text" class="reinput description" placeholder="请填写自我描述（20字以内）" maxlength="20">
 			</div>
 			<div class="reitems">
 				<p class="refont">性别:</p>
