--- a/template/detail.html
+++ b/template/detail.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="content">
-		<div class="register_header">
+		<div class="register_header" style="height: 200px">
 			<div class="personal">
 				<div class="pl">
 					<div class="head">
