--- a/template/index.html
+++ b/template/index.html
@@ -9,16 +9,21 @@
 <body>
 	<div class="content">
 		<div class="header">
+      <div class="sign_in">
+        <span>用户登入</span>
+      </div>
 			<div class="rule">
-				<span>活动规则</span>
+        <a href="rule.html">
+          <span>活动规则</span>
+        </a>
 			</div>
 			<div class="title tada">
 				<img src="static/images/title.png" alt="">
 			</div>	
 			<div class="register">
-            <a href="register.html">
-               我要报名
-            </a>
+          <a href="register.html">
+             我要报名
+          </a>
 			</div>
 			<div class="search">
 				<input type="text" placeholder="请输入用户名称">
