--- a/template/register.html
+++ b/template/register.html
@@ -19,6 +19,14 @@
 				<input type="text" class="reinput" placeholder="请填写姓名">
 			</div>
 			<div class="reitems">
+				<p class="refont">密码:</p>
+				<input type="password" class="reinput password initial_password" placeholder="数字或字母不超过10个长度" maxlength="10">
+			</div>
+			<div class="reitems">
+				<p class="refont">确认密码:</p>
+				<input type="password" class="reinput password confirm_password" placeholder="数字或字母不超过10个长度" maxlength="10">
+			</div>
+			<div class="reitems">
 				<p class="refont">手机号码:</p>
 				<input type="text" class="reinput" placeholder="请填写正确格式的手机号码">
 			</div>
